2001-07-08  Larry Jones  <larry.jones@sdrc.com>

	* rcs.c (RCS_checkout): Correct scanf format to allow for trailing
	NUL terminator.
	* update.c (special_file_mismatch): Ditto.
	(Reported by Pekka Savola <pekkas@netcore.fi>.)

2001-07-05  Larry Jones  <larry.jones@sdrc.com>

	* client.c, root.c: Fix -Wall warnings.

	* buffer.c: #include socket header to declare shutdown().

	* rcs.c (rcsbuf_open): Use getpagesize() instead of sysconf() for
	portability.
	(RCS_copydeltas, rcsbuf_fill): Fix -Wall warnings.

2001-07-04  Derek Price  <dprice@collab.net>

	* Makefile.in: Regenerated with new Automake release candidate 1.4h.

2001-07-03  Derek Price  <dprice@collab.net>

	* rcs.c (rcsbuf_open): Reduce memory consumption still further by not
	mmapping the entire file when pos is specified.
	(rcsbuf_cache_open): Add FIXME comment wrt read-only mmaps and rcsbuf
	caching.

2001-07-03  Derek Price  <dprice@collab.net>

	* rcs.c (rcsbuf_open): Use mmap when possible to reduce memory
	consumption, especially with large (e.g. binary) files.
	(rcsbuf_close): Call munmap.
	(rcsbuf_getkey): Remove the buffer fill code when using mmap.
	(rcsbuf_getrevnum): Ditto.
	(rcsbuf_fill): Remove this function when using mmap.
	(rcsbuf_cache_open): Mostly don't use this function with mmap.
	(RCS_copydeltas): Don't depend on the file pointer with mmap.

	* stamp-h2.in: Regenerated.

2001-07-03  Derek Price  <dprice@collab.net>

	* update.c: Indent compiler directives.

2001-07-02  Larry Jones  <larry.jones@sdrc.com>

	* import.c (update_rcs_file): Use -kb instead of -ko when comparing
	binary files.
	(Reported by Gyula Faller <gfaller@graphisoft.hu>.)

2001-06-28  Larry Jones  <larry.jones@sdrc.com>

	* checkout.c (checkout): Explicitly initialize all the static options
	so that multiple calls work right.  Also fix potential memory leaks.
	(Reported by Dr. Dieter Maurer <dieter@sz-sb.de>.)

2001-06-28  Derek Price  <dprice@collab.net>

	* Makefile.in: Regenerated with new version of Automake.